--- a/work5/style.css
+++ b/work5/style.css
@@ -1,11 +1,35 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .head{
-    text-align: center;
     background-color:#2b2929;
     color: white;
-    height:60px;
-    margin-bottom: 10px;
+    text-align: center;
     
 }
 .box1{
-    height: 40px;
+}
+.box2{
+    height: 20px;
+    background-color: #38393b;
+}
+
+ul {
+    color: white;
+    text-align: center;
+    margin: auto;
+}
+
+ul li {
+    display: inline;
+    margin: 20px;
+}
+
+ul li a{
+    color: white;
+    display: inline;
+    text-decoration: none;
 }
